Refatoração para uso de APIs

--- a/views/inserir.ejs
+++ b/views/inserir.ejs
@@ -31,7 +31,7 @@
                                 find=true;
                                 let qtd2 = td[9].childNodes[0].nodeValue;
                                 let val2 = td[7].childNodes[0].nodeValue;
-                                let tam2 = td[5].childNodes[0].nodeValue
+                                let tam2 = td[5].childNodes[0].nodeValue;
 
                                 qtd.value = parseInt(qtd2)+1;
                                 qtd.min = parseInt(qtd2);
