--- a/views/vendas.ejs
+++ b/views/vendas.ejs
@@ -19,7 +19,7 @@
                 <label for="qtd" id="labelqtd" hidden>Quantidade vendida</label>
                 <input type="number" id="qtd" name="qtd" value="1" hidden><br id="br2" hidden>
 
-                <button id="button" hidden></button>
+                <button id="button" onclick="efetuar()" hidden></button>
                 <button id="buttoncancel" onclick="Cancelar()" hidden></button>
 
                 <div id="escolha">
@@ -70,10 +70,9 @@
                         val.hidden=null;
 
                         axios.get("http://localhost:8080/produto/" + id).then(produto => {
-                            let prod = produto.data.produtos[0];
-                            val.value = prod.valor;
-                            desc.value = prod.descricao.toString().toUpperCase();
-                            idc.value = prod.ID;
+                            val.value = produto.data.produtos[0].valor;
+                            desc.value = produto.data.produtos[0].descricao.toString().toUpperCase();
+                            idc.value = produto.data.produtos[0].ID;
                         })
 
                         button.className = "btn btn-outline-dark";
@@ -85,13 +84,6 @@
                         buttoncancel.hidden = null;
                         buttoncancel.style = "margin-left: 10px";
 
-                        button.addEventListener("click",function (){
-                            efetuar(id);
-                        })
-
-                        form.appendChild(button);
-                        form.appendChild(buttoncancel);
-
                     }
                 </script> <!-- Clique no botão vender TABELA -->
                 <script>
@@ -101,6 +93,8 @@
                         let desc = document.getElementById("desc");
                         let button = document.getElementById("button");
                         let buttoncancel = document.getElementById("buttoncancel");
+
+
 
                         document.getElementById("qtd").hidden = null;
                         document.getElementById("labelqtd").hidden = null;
@@ -129,11 +123,6 @@
                         buttoncancel.innerHTML = "Cancelar";
                         buttoncancel.hidden = null;
                         buttoncancel.style = "margin-left: 10px";
-
-                        button.addEventListener("click",function (){
-                            efetuar(id);
-                        })
-
                     }
                 </script> <!-- Clique no botão remover TABELA -->
                 <script>
@@ -141,7 +130,7 @@
                         let produto = produtos.data.produtos;
                         let table = document.getElementById("tbody");
 
-                        produto.forEach(prod => {
+                        produto.forEach(product => {
                             let tr = document.createElement("tr");
                             let tdid = document.createElement("td");
                             let tddesc = document.createElement("td");
@@ -161,17 +150,17 @@
                             rembutton.className = "btn btn-outline-dark";
 
                             sellbutton.addEventListener("click",function (){
-                                vender(prod.ID);
+                                vender(product.ID);
                             })
                             rembutton.addEventListener("click",function (){
-                                remover(prod.ID);
+                                remover(product.ID);
                             })
 
-                            tdid.innerHTML = prod.ID;
-                            tddesc.innerHTML = prod.descricao;
-                            tdtam.innerHTML = prod.tamanho;
-                            tdquant.innerHTML = prod.quantidade;
-                            tdval.innerHTML = prod.valor;
+                            tdid.innerHTML = product.ID;
+                            tddesc.innerHTML = product.descricao;
+                            tdtam.innerHTML = product.tamanho;
+                            tdquant.innerHTML = product.quantidade;
+                            tdval.innerHTML = product.valor;
 
                             tdbutton.appendChild(sellbutton);
                             tdbutton.appendChild(rembutton);
@@ -219,12 +208,13 @@
                     }
                 </script> <!-- Botão Cancelar -->
                 <script>
-                    function efetuar(id) {
+                    function efetuar() {
                         let qtd = document.getElementById("qtd").value;
                         let val = document.getElementById("val").value;
                         let escolha = document.getElementById("escolha").value;
                         let descri = document.getElementById("desc").value;
                         let user = document.getElementById("malu").value;
+                        let id = document.getElementById("ID").value;
                         let prod = {
                             ID: id,
                             descricao: descri,
@@ -232,7 +222,8 @@
                             valor: val,
                             escolha: escolha,
                             user: user
-                        }
+                        };
+
 
                         axios.put("http://localhost:8080/produto/" + id,prod).then(data => {
                             if(data.status===200){
@@ -248,6 +239,7 @@
                                 document.getElementById("maluco").innerHTML = "Produto removido com sucesso!";
                             }
                         }).catch(error => {
+                            console.log(error.toString("409").indexOf());
                             if(error.toString().indexOf('403')!==-1){
                                 document.getElementById("maluco").style = "margin-top : 20px"
                                 document.getElementById("maluco").className = "alert alert-danger";
@@ -267,6 +259,7 @@
                                 document.getElementById("maluco").innerHTML = "Erro na aplicação por favor, contate o desenvolvedor!";
                             }
                         })
+                        prod.ID = null;
                     }
                 </script> <!-- Efetua venda ou remoção -->
                 <script>
@@ -276,6 +269,7 @@
                         let tbody=document.getElementById("tbody");
                         let tr=tbody.childNodes[1];
                         let td=tr.childNodes;
+
 
                         for (let i=1;i<tbody.childNodes.length;i++){
                             tr=tbody.childNodes[i];
