--- a/views/carrinho.ejs
+++ b/views/carrinho.ejs
@@ -9,11 +9,10 @@
         </div>
         <div class="card-body">
             <div style="margin-bottom: 20px">
-                <form method="POST" action="/removercarrinho">
-                    <label for="remov">Nº Carrinho:</label>
-                    <input type="number" id="remov" name="remov" min="1" value="1", max="<%=tam%>">
-                    <input type="submit" value="REMOVER"  class="btn btn-outline-dark">
-                </form>
+                <label for="remov">Nº Carrinho:</label>
+                <input type="number" id="remov" name="remov" min="1" value="1">
+                <input type="submit" value="REMOVER"  class="btn btn-outline-dark">
+                <input id="user" value="<%=user%>" hidden>
             </div>
             <div class="btn-group btn-block" >
                 <a class="btn btn-outline-dark" href="/venda" role="button"> CONTINUAR VENDENDO </a>
@@ -28,34 +27,11 @@
                         <th scope="col"> Nº CARRINHO </th>
                         <th scope="col"> ID </th>
                         <th scope="col"> Descrição </th>
-                        <th scope="col"> Tamanho </th>
                         <th scope="col"> Valor </th>
                         <th scope="col"> Quantidade </th>
-                        <th scope="col"> Status </th>
                     </tr>
                 </thead>
                 <tbody id="tbody">
-                    <% for(var i=0; i < tam ; i++) { %>
-                        <%if(prod[i].radio==1){%>
-                            <a hidden><%=sum1=parseInt(sum1)+parseInt(prod[i].quant)%></a>
-                            <a hidden><%=sum2+=prod[i].valor * prod[i].quant%></a>
-                        <%}%>
-                        <tr>
-                            <td><%= i+1 %> </td>
-                            <td><%= prod[i].id %> </td>
-                            <td><%= prod[i].descri %> </td>
-                            <td><%= prod[i].tamanho %> </td>
-                            <td><%= prod[i].valor * prod[i].quant %> </td>
-                            <td><%= prod[i].quant %> </td>
-                            <%if(prod[i].radio==1){%>
-                                <td> V </td>
-                            <%}%>
-                            <%if(prod[i].radio==2){%>
-                                <td> R </td>
-                            <%}%>
-
-                        </tr>
-                    <% } %>
                 </tbody>
                 <thead class="thead-light">
                     <tr>
@@ -63,15 +39,65 @@
                         <th scope="col">VALOR VENDIDO</th>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr>
-                        <td><%= sum1 %></td>
-                        <td><%= sum2 %></td>
-                    </tr>
+                <tbody id="table2">
                 </tbody>
             </table>
         </div>
     </div>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script>
+
+    axios.get("http://localhost:8080/carrinho/" + document.getElementById("user").value).then(produtos =>{
+        let produto = produtos.data.produtos
+        let table = document.getElementById("tbody");
+        let quantvendido=0;
+        let valorvendido=0;
+
+        produto.forEach(product => {
+            let tr = document.createElement("tr");
+            let tdncarrinho = document.createElement("td");
+            let tdidproduto = document.createElement("td");
+            let tddescri = document.createElement("td");
+            let tdprodvalor = document.createElement("td");
+            let tdprodquant = document.createElement("td");
+
+            quantvendido += product.prod_quant;
+            valorvendido += product.prod_valor * product.prod_quant;
+
+            tdncarrinho.innerHTML = product.id_carrinho;
+            tdidproduto.innerHTML = product.id_produto;
+            tddescri.innerHTML = product.prod_descri;
+            tdprodvalor.innerHTML = product.prod_valor;
+            tdprodquant.innerHTML = product.prod_quant;
+
+            tr.appendChild(tdncarrinho);
+            tr.appendChild(tdidproduto);
+            tr.appendChild(tddescri);
+            tr.appendChild(tdprodvalor);
+            tr.appendChild(tdprodquant);
+
+            table.appendChild(tr);
+        })
+        let table2 = document.getElementById("table2");
+        let tr2 = document.createElement("tr");
+        let tdquantvend = document.createElement("td");
+        let tdvalorvend = document.createElement("td");
+
+        tdquantvend.innerHTML = quantvendido;
+        tdvalorvend.innerHTML = valorvendido;
+
+        tr2.appendChild(tdquantvend);
+        tr2.appendChild(tdvalorvend);
+        table2.appendChild(tr2);
+        
+    }).catch(error => {
+        if(error.toString().indexOf("404")){
+            console.log("Não encontrado!!!");
+        }
+    })
+
+
+</script>
 </body>
 <%- include partials/footer.ejs %>
