--- a/views/histvenda.ejs
+++ b/views/histvenda.ejs
@@ -86,6 +86,8 @@
                             divmalu.style = "margin-top: 15px";
                         }
                     })
+                </script> <!-- Carrega dados da tabela -->
+                <script>
                     function teste(){
                         let data = document.getElementById("data").value.toString();
                         let data2 = document.getElementById("data2").value.toString();
@@ -95,8 +97,18 @@
                         let date12;
                         if (data2===''){
                             date12 = new Date(parseInt(split[0])+1,parseInt(split[1])-1,parseInt(split[2]));
-                            split[0] = parseInt(split[0]) + 1;
-                            document.getElementById("data2").value = (split[0] +"-"+ split[1] +"-"+ split[2]);
+                            split[1] = parseInt(split[1]) + 1
+                            if(split[1]<10){
+                                split[1]='0' + split[1];
+                            }
+                            if(split[1]>12){
+                                split[1]='01';
+                                split[0]=parseInt(split[0]) + 1;
+                                document.getElementById("data2").value = (split[0] + "-" + split[1] + "-" + split[2]);
+                            }
+                            else {
+                                document.getElementById("data2").value = (split[0] + "-" + split[1] + "-" + split[2]);
+                            }
                         }
                         else{
                             date12 = new Date(parseInt(split2[0]), parseInt(split2[1]) - 1, parseInt(split2[2]));
@@ -132,23 +144,16 @@
                         busca=busca.toLowerCase();
 
                         for (let i = 1; i < tbody.childNodes.length; i++) {
-                            let find = false;
                             let tr = tbody.childNodes[i];
                             let td = tr.childNodes;
 
-                            for (j=1;j<td.length;j=j+2){
-                                let value = td[j].childNodes[0].nodeValue.toLowerCase();
-                                if(value.indexOf(busca)===0){
-                                    find=true;
-                                }
-                            }
+                            let value = td[2].childNodes[0].nodeValue.toLowerCase();
 
-                            if (find) {
+                            if (value.indexOf(busca)===0) {
                                 tr.style.display = "table-row";
                             } else {
                                 tr.style.display = "none";
                             }
-                            i++;
                         }
                     })
                 </script> <!-- Pesquisa por descrição -->
