--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,18 +8,27 @@
             <h4 ALIGN="CENTER" class="text-black-50" style="text-transform: uppercase">LOGIN</h4>
         </div>
         <div class="card-body">
-            <form id="form" method="post" action="/login">
-                <label for="user">Usuario:</label>
-                <input type="text" id="user" name="user" c> <br>
-                <label for="password">Senha:</label>
-                <input type="password" id="password" name="password"><br>
-            </form>
+            <label for="user">Usuario:</label>
+            <input type="text" id="user" name="user" c> <br>
+            <label for="password">Senha:</label>
+            <input type="password" id="password" name="password"><br>
             <button type="submit" id="bot" class="btn btn-outline-dark" onclick="salvar()"> Login </button>
             <button class="btn btn-outline-dark" onclick="window.location.href='/cadastrouser'">Cadastrar novo usuario</button>
+            <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
             <script>
                 function salvar(){
-                    form = document.getElementById("form");
-                    form.submit();
+                    let usuar = document.getElementById("user");
+                    let pass = document.getElementById("password");
+                    let usuario = {
+                        user: usuar,
+                        pass: pass
+                    }
+
+                    axios.get("http://localhost:8080/users/login",usuario).then(data => {
+                        if(data.status(200)){
+                            console.log("OKOK");
+                        }
+                    })
                 }
             </script>
             <div id='maluco' role="<%=role%>>" class="<%= aler%>" style="<%styl%>">
