--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,39 +3,60 @@
 <body >
 <%- include partials/navbar.ejs %>
 <div class="container">
-    <div class="card" id="formulario-venda">
+    <div class="card" id="fosrmulario-venda">
         <div class="card-header">
             <h4 ALIGN="CENTER" class="text-black-50" style="text-transform: uppercase">LOGIN</h4>
         </div>
         <div class="card-body">
-            <label for="user">Usuario:</label>
+            <label id="lab" for="user">Usuario:</label>
             <input type="text" id="user" name="user" c> <br>
-            <label for="password">Senha:</label>
+            <label id="lab" for="password">Senha:</label>
             <input type="password" id="password" name="password"><br>
-            <button type="submit" id="bot" class="btn btn-outline-dark" onclick="salvar()"> Login </button>
-            <button class="btn btn-outline-dark" onclick="window.location.href='/cadastrouser'">Cadastrar novo usuario</button>
+            <button id="bot" class="btn btn-outline-dark" onclick="salvar()"> Login </button>
+            <button id="bot" class="btn btn-outline-dark" onclick="window.location.href='/cadastrouser'">Cadastrar novo usuario</button>
+
             <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
             <script>
                 function salvar(){
-                    let usuar = document.getElementById("user");
-                    let pass = document.getElementById("password");
+                    let usuar = document.getElementById("user").value;
+                    let pass = document.getElementById("password").value;
+                    console.log(usuar + " " + pass);
                     let usuario = {
                         user: usuar,
                         pass: pass
                     }
 
-                    axios.get("http://localhost:8080/users/login",usuario).then(data => {
-                        if(data.status(200)){
-                            console.log("OKOK");
+                    axios.post("http://localhost:8080/users/login",usuario).then(data => {
+                        if(data.status===200){
+                            window.location.href = "/index";
+                        }
+                    }).catch(error => {
+                        let divmalu = document.getElementById("maluco");
+                        if(error.toString().indexOf("401")!==-1){
+                            divmalu.innerHTML = "Senha incorreta!";
+                            divmalu.className = "alert alert-danger";
+                            divmalu.role = "alert";
+                            divmalu.style = "margin-top: 15px";
+                        }
+                        if(error.toString().indexOf("404")!==-1){
+                            divmalu.innerHTML = "Usuario não encontrado!";
+                            divmalu.className = "alert alert-danger";
+                            divmalu.role = "alert";
+                            divmalu.style = "margin-top: 15px";
+                        }
+                        if(error.toString().indexOf("500")!==-1){
+                            divmalu.innerHTML = "Problema no sistema, contate o desenvolvedor!";
+                            divmalu.className = "alert alert-danger";
+                            divmalu.role = "alert";
+                            divmalu.style = "margin-top: 15px";
                         }
                     })
                 }
-            </script>
-            <div id='maluco' role="<%=role%>>" class="<%= aler%>" style="<%styl%>">
-                <%= tex%>
+            </script> <!-- Verifica se usuario -->
+            <div id='maluco'>
+
             </div>
         </div>
-
     </div>
 </div>
 </body>
